<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_39B6DF">

    <EditText
        android:id="@+id/register_account_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_above="@id/register_password_edit"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_36"
        android:background="@drawable/user_bg_round_white"
        android:drawableStart="@mipmap/user_icon_email"
        android:drawableLeft="@mipmap/user_icon_email"
        android:drawablePadding="@dimen/dp_20"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/user_register_account_hint"
        android:inputType="number"
        android:padding="@dimen/dp_12"
        android:textColorHint="@color/color_999" />

    <EditText
        android:id="@+id/register_password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:background="@drawable/user_bg_round_white"
        android:drawableStart="@mipmap/user_icon_pwd"
        android:drawableLeft="@mipmap/user_icon_pwd"
        android:drawablePadding="@dimen/dp_20"
        android:hint="@string/user_register_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/dp_12"
        android:textColorHint="@color/color_999" />

    <EditText
        android:id="@+id/register_confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@id/register_password_edit"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_48"
        android:background="@drawable/user_bg_round_white"
        android:drawableStart="@mipmap/user_icon_pwd"
        android:drawableLeft="@mipmap/user_icon_pwd"
        android:drawablePadding="@dimen/dp_20"
        android:hint="@string/user_register_confirm_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/dp_12"
        android:textColorHint="@color/color_999" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@id/register_confirm_password_edit"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_48"
        android:background="@drawable/user_bg_round_green"
        android:text="@string/user_register"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_21" />

</RelativeLayout>